A few corrections for the editor. 	modified:   paper.tex 	modified:   references.bib

--- a/paper.tex
+++ b/paper.tex
@@ -352,8 +352,7 @@ The following sections contain short descriptions of the lens finding methods th
 the challenge.  Each sub-section refers to a team which gave a separate entry.  We have grouped the 
 methods into four categories according to the type of method used.   The Receiver Operating Characteristic (ROC) curve and the area under this curve are referred to in these sections.  The ROC is defined in Section~\ref{sec:figure_of_merit} where methods for evaluating the entries is discussed.  A reader unfamiliar with the ROC might want to refer to that section.
 
-\subsection{Visual inspection}
-\subsubsection{Manchester1/Manchester2 (Jackson,Tagore)}
+\subsection{Visual inspection :  Manchester1/Manchester2 (Jackson,Tagore)}
 \label{sec:manchester}
 
 All images (a total of 100000) were examined for each of the space- and
