--- a/references.bib
+++ b/references.bib
@@ -293,7 +293,7 @@ archivePrefix = "arXiv",
 	Adsurl = {http://adsabs.harvard.edu/abs/2006astro.ph..6757A},
 	Author = {{Alard}, C.},
 	Eprint = {astro-ph/0606757},
-	Journal = {ArXiv Astrophysics e-prints},
+	Journal = {e-prints arXiv:0606757},
 	Keywords = {Astrophysics},
 	Month = jun,
 	Title = {{Automated detection of gravitational arcs}},
